@@ -87,6 +87,29 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+		<h3>July 21, 2008</h3>
+		  <b>Unstable</b> version 2.23.5 released.<br />
+			This release stores files according to FreeDesktop's
+			XDG basedir spec. In addition, history can be accessed
+			as in the 2.18 version. An arrow is displayed next to
+			the Deskbar icon which open's a list of recently used
+			actions.<br /><br />
+		  Changes since 2.23.4:
+		  <ul>
+		  	<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=378755">bug #378755</a>: Use contact's name, not their email address, when writing new mails (patch by Oleg Andreev)</li>
+			<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=535236">bug #535236</a>: the dialog location change every time it's displayed</li>
+			<li>Set top/up/down/bottom buttons insensitive by default (patch by Goran Rakic)</li>
+			<li>Added check if iter != None when one of the above buttons is pressed (fixes <a href="http://bugzilla.gnome.org/show_bug.cgi?id=490981">bug #490981</a>)</li>
+			<li>Set default log level to WARNING. Added -d/--debug options to display debug messages</li>
+			<li>Place user's modules in $XDG_DATA_HOME/deskbar-applet/modules-2.20-compatible and history file together with modules' configuration data into $XDG_CONFIG_HOME/deskbar-applet</li>
+			<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=542638">bug #542638</a>: Don't put dict keys in gettext call parameter (patch by Claude Paroz)</li>
+			<li>Check if display name is not None (fixes <a href="http://bugzilla.gnome.org/show_bug.cgi?id=500087">bug #500087</a>)</li>
+			<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=516142">bug #516142</a>: Should use plural for strings</li>
+			<li>Access history like in 2.18. Added arrow beside the Deskbar icon. Clicking on it will show the a list of previously activated actions.</li>
+			<li>Display history in tray mode as a sub-menu.</li>
+			<li>Catch OSError when calling os.listdir. (Fixes <a href="http://bugzilla.gnome.org/show_bug.cgi?id=494922">bug #494922</a>)</li>
+		  </ul>
+
 		<h3>June 30, 2008</h3>
 		  <b>Stable</b> version 2.22.3 released. This is the last release in the 2.22 series.
 		  Changes since 2.22.2.1:
