@@ -1,3 +1,9 @@
+2008-07-21	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.23.5 release
+
 2008-07-16	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* index.html:
